fixed sticky footer covering up content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,20 @@
-body {
+body, html {
     background-image: url("../images/white-waves.png");
     color: #777777;
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    height: 100%;
+    padding: 0;
 }
 .topBar {
     background: #ffffff;
     width: 100%;
-    margin-top: -8px;
     height: 79px;
-    position: relative;
     border-bottom: 1px solid #777777;
+    z-index: 999;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
 }
 .nameBox {
     position: absolute;
@@ -41,15 +46,20 @@ body {
   right: 235px;
   top: 33px;
 }
-section {
+.container {
+    min-height: 100%;
     position: relative;
+}
+.mainContent {
     background-color:#ffffff;
     width: 960px;
     margin: auto;
-    margin-top: 35px;
+    margin-top: 105px;
     border: 1px solid grey;
-    max-height: 600px;
-}
+    position: relative;
+    min-height: 100%;
+
+ }
 #header {
     color: #4aaaa5;
     margin: 25px;
@@ -91,20 +101,21 @@ hr {
     margin: 25px;
     top: -225px;
 }
-footer {
-    position: absolute;
-    bottom: 0;
+.aboutDiv {
+    margin-bottom: -220px;
+}
+.footer {
     background-color: #666666;
     width: 100%;
-    height: 35px;
-    margin: auto;
-    margin-left: -8px;
+    margin: 0 auto;
     font-size: 13px;    
     text-align: center;
     color: white;
-    padding-top: 18px;
+    padding-top: 20px;
     padding-bottom: 5px;
+    height: 35px;
     border-top: 8px solid #4aaaa5;
+    
 }
 label {
     display: block;
